--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>School Soccer Tournament</title>
-
+  <title>ECA Soccer Tournament</title>
+<link rel="icon" href="67.png" type="image/png">
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
