--- a/winnings.html
+++ b/winnings.html
@@ -149,7 +149,7 @@
 <body>
 
   <header>
-    <h2>School Cup</h2>
+    <h2>ECA Soccer Cup</h2>
     <nav>
       <a href="index.html">Home</a>
       <a href="winnings.html" class="active">Winnings</a>
