--- a/rules.html
+++ b/rules.html
@@ -143,6 +143,7 @@
         <li>Teams consist of five players on the field.</li>
         <li>Matches will start at the scheduled time. Late teams may forfeit.</li>
         <li>Cleats NOT ALLOWED!</li>
+        <li>Goalies are optional.</li>
       </ul>
 
       <h3>Gameplay</h3>
