--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <a href="index.html" class="active">Home</a>
       <a href="winnings.html">Winnings</a>
       <a href="rules.html">Rules</a>
-      <a href="https://forms.gle/3UkHYYNG3S9Bfzdy7">Register</a>
+      <a href="teams.html">Teams</a>
     </nav>
   </header>
 
