--- a/teams.html
+++ b/teams.html
@@ -100,13 +100,14 @@
     }
 
     .teams-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
+      display: flex;
+      justify-content: space-between; 
+      gap: 20px; 
       margin-top: 30px;
     }
 
     .team-box {
+      flex: 0 0 calc(20% - 16px); 
       background: rgba(18, 18, 18, 0.9);
       border: 1px solid #1f1f1f;
       border-radius: 16px;
@@ -174,7 +175,6 @@
         The tournament will feature the following teams. Each team consists of six players who were drafted through a wheel system. Check out the teams below!
       </p>
 
-      <!-- List of Teams -->
       <div class="teams-list">
         <div class="team-box">
           <h3>Team 1</h3>
@@ -221,6 +221,15 @@
             <li>Jordan Martinez</li>
             <li>Nathan/Chino</li>
             <li>Joan Hernandez</li>
+          </ul>
+        </div>
+
+        <div class="team-box">
+          <h3>Subs</h3>
+          <ul class="members">
+            <li>Gohan Lucas</li>
+            <li>Jean Fabian</li>
+            <li>Francisco Canas</li>
           </ul>
         </div>
       </div>
