--- a/teams.html
+++ b/teams.html
@@ -162,7 +162,7 @@
     <h2>ECA Soccer Cup</h2>
     <nav>
       <a href="index.html">Home</a>
-      <a href="winnings.html">Winnings</a>
+      <a href="upcoming.html" class="active">Upcoming</a>
       <a href="rules.html">Rules</a>
       <a href="teams.html" class="active">Teams</a>
     </nav>
