--- a/rules.html
+++ b/rules.html
@@ -127,7 +127,7 @@
     <h2>ECA Soccer Cup</h2>
     <nav>
       <a href="index.html">Home</a>
-      <a href="winnings.html">Winnings</a>
+      <a href="upcoming.html" class="active">Upcoming</a> 
       <a href="rules.html" class="active">Rules</a>
       <a href="teams.html">Teams</a>
     </nav>
@@ -138,11 +138,12 @@
       <h1>Tournament Rules</h1>
 
       <h3>General</h3>
-      <ul>
+      <ul> 
         <li>All players must be officially registered before the tournament begins.</li>
         <li>Teams consist of five players on the field.</li>
         <li>Matches will start at the scheduled time. Late teams may forfeit.</li>
         <li>Cleats NOT ALLOWED!</li>
+        <li>No shooting from half court</li>
       </ul>
 
       <h3>Gameplay</h3>
