--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <h2>ECA Soccer Cup</h2>
     <nav>
       <a href="index.html" class="active">Home</a>
-      <a href="winnings.html">Winnings</a>
+      <a href="upcoming.html" class="active">Upcoming</a> 
       <a href="rules.html">Rules</a>
       <a href="teams.html">Teams</a>
     </nav>
