--- a/upcoming.html
+++ b/upcoming.html
@@ -175,11 +175,11 @@
           </div>
           <div class="player">
             <img src="pics/basic.png" alt="Player 4">
-            <p class="player-name">Yosgar Mariano</p>
+            <p class="player-name">Francisco Canas</p>
           </div>
           <div class="player">
             <img src="pics/basic.png" alt="Player 5">
-            <p class="player-name">Giovanni Lopez</p>
+            <p class="player-name">Allen</p>
           </div>
           <div class="player">
             <img src="pics/basic.png" alt="Player 6">
