--- a/upcoming.html
+++ b/upcoming.html
@@ -178,7 +178,7 @@
             <p class="player-name">Juliam Sevilla</p>
           </div>
           <div class="player">
-            <img src="pics/basic.png" alt="Player 5">
+            <img src="pics/jacob.png" alt="Player 5">
             <p class="player-name">Jacob Luviano</p>
           </div>
           <div class="player">
