--- a/upcoming.html
+++ b/upcoming.html
@@ -189,7 +189,7 @@
       </div>
 
       <div class="score">
-        Next Game Feb 2: Monday
+        Next Game: Today
       </div>
 
       <div class="team">
