--- a/teams.html
+++ b/teams.html
@@ -189,7 +189,7 @@
         </div>
 
         <div class="team-box">
-          <h3>Team 2</h3>
+          <h3>Team 2: Eliminated</h3>
           <ul class="members">
             <li>Captain: 👑Alexander</li>
             <li>Elian</li>
