--- a/upcoming.html
+++ b/upcoming.html
@@ -182,7 +182,7 @@
             <p class="player-name">Jacob Luviano</p>
           </div>
           <div class="player">
-            <img src="pics/nate.png" alt="Player 6">
+            <img src="pics/basic.png" alt="Player 6">
             <p class="player-name">Nathan Rodriguez</p>
           </div>
         </div>
