--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <a href="upcoming.html" class="active">Upcoming</a> 
       <a href="rules.html">Rules</a>
       <a href="teams.html">Teams</a>
+      <a href="files.html">Files</a>
     </nav>
   </header>
 
